@@ -5,7 +5,7 @@
  * gaim
  *
  * Copyright (C) 2002-2003 Christian Hammond <chipx86@gnupdate.org>
- * 
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
@@ -66,6 +66,7 @@ struct _GaimGtkWindow
 
 		GtkWidget *logging;
 		GtkWidget *sounds;
+		GtkWidget *show_formatting_toolbar;
 
 		GtkWidget *send_as;
 
@@ -126,6 +127,7 @@ struct _GaimGtkChatPane
 struct _GaimGtkConversation
 {
 	gboolean make_sound;
+	gboolean show_formatting_toolbar;
 	gboolean has_font;
 	char fontface[128];
 	GdkColor fg_color;
